@@ -21,7 +21,9 @@ Version 2.1 (Batasu) August-2021:
 	* Script Manager [0.1.28] - fix for nmap [1]
 	* Script Manager [0.1.29] - fix for nmap [2]
 	* Script Manager [0.1.30] - added zphisher 
-	* Script Manager [0.1.31] - added shorturl 
+	* Script Manager [0.1.31] - added shorturl and new menu with color added 
+	* Script Manager [0.1.32] - added zvirus gen
+	* Script Manager [0.1.32] - added bash2mp4
 	
 Version 2.0 (Batasu) July-2021:
 	* Separated script function from main script
